hot reload the place and keep persisted values